[gd_scene load_steps=7 format=3 uid="uid://dxkedmcagk1f7"]

[ext_resource type="Script" path="res://scene_manager.gd" id="1_e4hne"]
[ext_resource type="PackedScene" uid="uid://d0qyk6v20uief" path="res://board1.tscn" id="1_qvff6"]
[ext_resource type="PackedScene" uid="uid://oqksxmk0oy6d" path="res://board2.tscn" id="3_nk4u4"]
[ext_resource type="PackedScene" uid="uid://k2gw7bi6xpte" path="res://board3.tscn" id="4_fx5ru"]
[ext_resource type="PackedScene" uid="uid://3jbfidu0kffq" path="res://board4.tscn" id="5_igtsu"]
[ext_resource type="PackedScene" uid="uid://df5qjsqm66rsd" path="res://board_select.tscn" id="6_trku3"]

[node name="SceneManager" type="Node2D"]
position = Vector2(2, 0)
script = ExtResource("1_e4hne")

[node name="Board1" parent="." instance=ExtResource("1_qvff6")]

[node name="Board2" parent="." instance=ExtResource("3_nk4u4")]

[node name="Board3" parent="." instance=ExtResource("4_fx5ru")]

[node name="Board4" parent="." instance=ExtResource("5_igtsu")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(200, 210)
zoom = Vector2(1.3, 1.3)

[node name="BoardSelect" parent="." instance=ExtResource("6_trku3")]
visible = false
